<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.lappsgrid.maven</groupId>
        <artifactId>parent-pom</artifactId>
        <version>2.0.0</version>
    </parent>
	<groupId>edu.brandeis.cs.lapps</groupId>
	<artifactId>stanfordnlp-web-service</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Web Services wrapping Stanford  CoreNLP tools</name>
	<description>
	Publish API for the LAPPS exchange data structure (LEDS), the thing that will be serialized to from JSON-LD. 
	Provide converter for the Standford one-per-line format to LEDS.
	</description>


    <!--http://www.anc.org:8080/Versions/-->
	<properties>
		<lapps.version>2.0.0</lapps.version>
		<lapps.core.version>2.0.0</lapps.core.version>
        <lapps.discriminator>2.0.1</lapps.discriminator>
        <lapps.util>1.0.0</lapps.util>
		<vocabulary.version>1.0.0</vocabulary.version>
        <serialization.version>2.0.0</serialization.version>
        <anc.common>3.4.0</anc.common>
        <stanford.version>3.3.1</stanford.version>
	</properties>

	<repositories> <!-- internal repository -->
		<repository>
			<id>the Maven central repository</id>
			<url>http://repo.maven.apache.org/maven2/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>${stanford.version}</version>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>${stanford.version}</version>
			<classifier>models</classifier>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-parser</artifactId>
			<version>${stanford.version}</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
            <scope>test</scope>
		</dependency>
		<!-- BEGIN LappsGrid -->
		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>api</artifactId>
			<version>${lapps.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>core</artifactId>
			<version>${lapps.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>discriminator</artifactId>
			<version>${lapps.discriminator}</version>
		</dependency>
		<!--<dependency>-->
			<!--<groupId>org.anc.lapps</groupId>-->
			<!--<artifactId>util</artifactId>-->
			<!--<version>${lapps.util}</version>-->
		<!--</dependency>-->
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>serialization</artifactId>
            <version>${serialization.version}</version>
        </dependency>
		<dependency>
			<groupId>org.anc</groupId>
			<artifactId>common</artifactId>
			<version>${anc.common}</version>
		</dependency>
		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>vocabulary</artifactId>
			<version>${vocabulary.version}</version>
		</dependency>
		<dependency>
			<groupId>org.anc.grid</groupId>
			<artifactId>service-grid-libs</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		<!-- END LappsGrid -->

		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-api</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-impl</artifactId>
			<version>2.1.7</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>

        <!--- JSON Support -->
        <!--<dependency>-->
            <!--<groupId>org.lappsgrid</groupId>-->
            <!--<artifactId>JsonSerialization</artifactId>-->
            <!--<version>0.0.4</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.4.4</version>
        </dependency>
    </dependencies>

	<build>
		<!--<finalName>stanfordnlp-web-service</finalName>-->
        <finalName>stanfordnlp-web-service#${project.version}</finalName>
		<plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass></mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
            </plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>


            <plugin>
                <groupId>org.anc.maven.plugins</groupId>
                <artifactId>anc-maven-plugin</artifactId>
                <version>1.0.4</version>
                <executions>
                    <execution>
                        <id>version-class</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>version-class</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <package>edu.brandeis.cs.lappsgrid</package>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
					<!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
				</configuration>
			</plugin>
			<!--plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.10</version>
				<configuration>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>4040</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
                    <stopKey/>
                </configuration>
			</plugin-->
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.2.10.v20150310</version>
                <configuration>
                    <jvmArgs>-Xms512m -Xmx4096m -XX:MaxPermSize=256m</jvmArgs>
                    <httpConnector>
                        <port>4040</port>
                    </httpConnector>
                    <stopKey/>
                    <stopPort/>
                </configuration>
            </plugin>
		</plugins>
	</build>

</project>
